java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/NoMainMethod.java
<error descr="Unnamed class contains no 'main' method">void bar() {

}

class A {

}</error>